src/styles/theme.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@tailwind screens;

.button-primary {
  @apply bg-primary-500 hover:bg-primary-700 font-medium transform ease-in-out duration-500 text-white px-3 py-2 rounded;
}

.button-secondary {
  @apply px-3 py-1 disabled:opacity-20 disabled:cursor-default rounded bg-white border-2 border-primary-500 text-primary-700 hover:text-primary-900;
}

.button-primary-destructive {
  @apply bg-destructive-700 hover:bg-destructive-600 font-medium transform ease-in-out duration-500 text-white px-3 py-2 rounded;
}
.button-secondary-destructive {
  @apply px-3 py-1 rounded-md bg-white disabled:opacity-20 disabled:cursor-default border-2 border-destructive-500 text-destructive-700 hover:text-destructive-900 hover:bg-destructive-50 transition ease-in-out duration-500;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.no-scrollbar::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.no-scrollbar {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

